2007.Dec.31 (svn.debian.org/tux4kids - revision 397)
      Code:
	Add some additional reporting about student progress: a log.csv
	file that contains a brief (one-line) summary of every game
	played.  This file organization is chosen to make it easy to
	import the data into a spreadsheet program.

      Tim Holy <holy@wustl.edu>

2007.Dec.30 (svn.debian.org/tux4kids - revision 396)
    Bug fixes:
      fileops.c: homedir setting in read_config_file lacked a closedir,
        resulting in a memory leak.
      fileops.c: write_postgame_summary did not close the file after
        appending, resulting in the summary sometimes never being
        "flushed" (some summary files have just been truncated).
      mathcards.c: new_randomize_list did not set the "previous" field of
        each node, resulting in memory corruption & drawing glitches
      mathcards.c: free tmp_vect (fixes memory leak)

    New feature:
      mathcards & game & fileops: collect data on the amount of time each
        problem is on the screen, and report the median in the game
        summary files.

      Tim Holy <holy@wustl.edu>
	
2007.Dec.26 (svn.debian.org/tux4kids - revision 394)
    Code:
      * More bugfixing in the new login system: now the system seems to
	work if the homedir is specified in the global configuration file,
	and in a multiuser setup file permissions are set to be
	unrestrictive (so that a user can modify his/her own files no
	matter how he/she is logged in).
	
    Tim Holy <holy@wustl.edu>


2007.Dec.24 (svn.debian.org/tux4kids - revision 382-392)
    Code:
      * Fix bugs that came with the new login system, including: fix
	re-reading of highscores table, and several Valgrind-detected
	memory leaks in the string processing associate with the login
	system.
      * Add the gettext macro in front of the help strings so they can
	be internationalized (does it work?)
    Documentation:
      * Add documentation on tuxmathadmin in the README.txt file.
	