@@ -1,3 +1,9 @@
+2007.Dec.31 (svn.debian.org/tux4kids - revision 398)
+      Code:
+	Add a "--consolidatelogs" feature to tuxmathadmin.
+
+      Tim Holy <holy@wustl.edu>
+
 2007.Dec.31 (svn.debian.org/tux4kids - revision 397)
       Code:
 	Add some additional reporting about student progress: a log.csv
